--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ ul {
     overflow: hidden;
   }
   .form-container .header-buttons .header-btn{
-    width: 100;
+    width: 100%;
     padding: 0.6rem 1rem;
   background: transparent;
   border: none;
