--- a/main.css
+++ b/main.css
@@ -141,7 +141,9 @@ ul {
 .form-container .form-wrapper .navigate-link-wrapper a.navigate-link:hover {
   text-decoration: underline;
 }
-.form-container .form-wrapper .form .password-box-inner
+.form-container .form-wrapper .form .Password-box-inner{
+  position: relative;
+}
 /* FOOTER */
 footer {
   padding: 1rem;
